# ood_labs

lab01_simuduck/: CMakeLists.txt
lab01_simuduck/example/: main.cpp
lab01_simuduck/example/lib/: DecoyDuck.h  Duck.h  DuckFunctions.h  IQuakBehavior.h  MallardDuck.h  ModelDuck.h  RedheadDuck.h  RubberDuck.h  SqueakBehavior.h
lab01_simuduck/example/lib/Duck/: DecoyDuck.h  Duck.h  MallardDuck.h  ModelDuck.h  RedheadDuck.h  RubberDuck.h
lab01_simuduck/example/lib/Duck/Fly/: FlyNoWay.h  FlyWithWings.h  IFlyBehavior.h
lab01_simuduck/example/lib/Duck/Quack/: MuteQuackBehavior.h  QuackBehavior.h  SqueakBehavior.h
lab01_simuduck/task1/lib/: DuckFunctions.h
lab01_simuduck/task1/lib/Dance/: CantDanceStrategy.h  IDanceStrategy.h  MinuetDanceStrategy.h  WaltzDanceStrategy.h
lab01_simuduck/task1/lib/Duck/: Duck.h  ModelDuck.h  RedheadDuck.h  RubberDuck.h
lab01_simuduck/task1/lib/Fly/: FlyNoWay.h  FlyWithWings.h  IFlyBehavior.h
lab01_simuduck/task1/lib/Quack/: MuteQuackBehavior.h  QuackBehavior.h  SqueakBehavior.h
lab01_simuduck/task2/lib/: DuckFunctions.h
lab01_simuduck/task2/lib/Duck/: DecoyDuck.h  Duck.h  MallardDuck.h
lab01_simuduck/task2/lib/Fly/: FlyWithWings.h
lab01_simuduck/task2/lib/Quack/: MuteQuackBehavior.h
lab01_simuduck/task3/: main.cpp
lab01_simuduck/task3/lib/: Dance.h  Display.h  DuckContext.h  Fly.h  Quack.h
lab02_weather_station/: .clang-format  CMakeLists.txt
lab02_weather_station/example/WeatherStation/: Observer.h  WeatherData.h  main.cpp
lab02_weather_station/task1/: WeatherData.h  main.cpp
lab02_weather_station/task1/lib/: CStatsDisplay.h  SWeatherInfo.h
lab02_weather_station/task2/lib/: CObservable.h  CStatsDisplay.h  CWeatherData.h  IObserver.h  SWeatherInfo.h
lab02_weather_station/task2_test/unit/lib/: CObservableTest.cpp
lab02_weather_station/task3/: main.cpp
lab02_weather_station/task3/lib/: CDisplay.h  CObservable.h  IObservable.h  Measurement.h
lab02_weather_station/task3_test/unit/lib/: CObservableTest.cpp
lab02_weather_station/task4/: main.cpp
lab02_weather_station/task4/lib/: CDisplay.h  CObservable.h  CStatsDisplay.h  CWeatherData.h  SWeatherInfo.h
lab02_weather_station/task4_test/unit/lib/: CObservableTest.cpp
lab02_weather_station/task5/: main.cpp
lab02_weather_station/task5/lib/: CDisplay.h  CStatsDisplay.h  CWeatherData.h  IObservable.h  Measurement.h  SWeatherInfo.h
lab04_painter/: CMakeLists.txt
lab04_painter/src/: main.cpp
lab04_painter/src/lib/: CCanvas.h  CClient.h  CDesigner.h  CEllipse.h  CPainter.h  CPictureDraft.h  CRectangle.h  CRegularPolygon.h  CShape.h  CShapeFactory.h  CTriangle.h  Color.h  ConsoleCanvas.h  ICanvas.h  IDesigner.h  IShapeFactory.h  Types.h
lab04_painter/test/lib/unit/: CDesignerTest.cpp  CEllipseTest.cpp  CPainterTest.cpp  CPictureDraftTest.cpp  CRectangleTest.cpp  CRegularPolygonTest.cpp  CShapeFactoryTest.cpp  CTriangleTest.cpp  ConsoleCanvasTest.cpp
lab04_painter/test/lib/unit/matcher/: MatchersPoint2D.cpp
lab04_painter/test/lib/unit/mock/: MockCanvas.cpp  MockShape.cpp  MockShapeFactory.cpp
lab05_document/: CMakeLists.txt
lab05_document/src/: main.cpp
lab05_document/src/lib/: CApp.h  CHtmlDocument.h  CHtmlRenderer.cpp  CHtmlRenderer.h  CImageNode.cpp  CImageNode.h  CListRenderer.cpp  CListRenderer.h  CParagraphNode.cpp  CParagraphNode.h  CPath.h  IDocument.h  IRenderer.h
lab05_document/src/lib/command/: CCommandHistory.h  CDeleteNodeCommand.h  CDocumentCommandFactory.h  CHelpCommand.h  CInsertImageCommand.h  CInsertParagraphCommand.h  CListCommand.h  CRedoCommand.h  CReplaceTextCommand.h  CSaveCommand.h  CSaveToHistoryCommandDecorator.h  CSetTitleCommand.h  CUndoCommand.h  ICommand.h  ICommandFactory.h  ICommandHistory.h
lab05_document/src/lib/document/: CHtmlDocument.h  IDocument.h
lab05_document/src/lib/document/node/: CImageNode.cpp  CImageNode.h  CParagraphNode.cpp  CParagraphNode.h  INode.h  INodeVisitor.h  NodeType.h
lab05_document/src/lib/document/render/: CHtmlRenderer.cpp  CHtmlRenderer.h  CListRenderer.cpp  CListRenderer.h  IRenderer.h
lab05_document/src/lib/file/: CFileSystemFileStorage.h  CPath.h  IFileStorage.h
lab05_document/src/lib/random/: Random.h
lab05_document/src/lib/utils/: Strings.h
lab05_document/test/lib/: CHtmlDocumentTest.cpp  CListRendererTest.cpp
lab05_document/test/lib/command/: CDeleteNodeCommandTest.cpp  CDocumentCommandFactoryTest.cpp  CHelpCommandTest.cpp  CInsertImageCommandTest.cpp  CInsertParagraphCommandTest.cpp  CListCommandTest.cpp  CReplaceTextCommandTest.cpp  CSaveCommandTest.cpp  CSetTitleCommandTest.cpp  MockCommandHistory.cpp
lab05_document/test/lib/document/: CHtmlDocumentTest.cpp  MockDocument.cpp
lab05_document/test/lib/document/node/: MockNode.cpp
lab05_document/test/lib/document/render/: CHtmlRendererTest.cpp  CListRendererTest.cpp
lab05_document/test/lib/file/: CPathMatchers.cpp  CPathTest.cpp  MockFileStorage.cpp
lab05_document/test/lib/random/: RandomTest.cpp
lab05_document/test/lib/utils/: StringTest.cpp
lab06_adapter/: CMakeLists.txt
lab06_adapter/class_adapter/src/: main.cpp
lab06_adapter/class_adapter/src/app/: app.h
lab06_adapter/src/: main.cpp
lab06_adapter/src/app/: app.h
lab06_adapter/src/app/graphics/: CModernGraphicsRendererAdapter.h
lab06_adapter/src/lib/graphics_lib/: graphics_lib.h
lab06_adapter/src/lib/modern_graphics_lib/: modern_graphics_lib.h
lab06_adapter/src/lib/shape_drawing_lib/: shape_drawing_lib.h
lab07_composite/: CMakeLists.txt
lab07_composite/data/: lab07_composite.drawio.xml
lab07_composite/src/: main.cpp
lab07_composite/src/app/canvas/: CSvgCanvas.h  ICanvas.h  IDrawable.h
lab07_composite/src/app/common/: SColor.h  SFrame.h  SPoint.h
lab07_composite/src/app/figure/: CEllipse.h  CFigureGroup.h  CPrimitive.h  CRectangle.h  IFigure.h
lab07_composite/src/app/figure/style/: CFillStyle.h  (+1 more)
lab07_composite/src/app/slide/: CSlide.h  ISlide.h
lab08_state/: CMakeLists.txt
lab08_state/MultiGumballMachine/: CMakeLists.txt
lab08_state/src/app/gum_ball_machine_with_state/: CGumballMachine.h  IGumballMachine.h  IState.h
(+32 files in other folders)
